--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="media_button">Media</string>
     <string name="info_button">Info</string>
     <string name="settings_button">Settings</string>
+    <string name="desc">A Description</string>
 </resources>
